force-app/main/default/objects/Grain_Price__c/Grain_Price__c.object-meta.xml
<CustomObject>
    <description>Object to house the price of grain, by quality, by site, that Manildra is currently purchasing</description>
    <label>Grain Price</label>
    <nameField>
        <label>Grain Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grain Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>