force-app/main/default/objects/Grain_Price__c/fields/Bin_Grade__c.field-meta.xml
<CustomField>
    <fullName>Bin_Grade__c</fullName>
    <description>Picklist field to hold potential Bin Grade options</description>
    <label>Bin Grade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>