force-app/main/default/objects/Grain_Price__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date field to indicate when the purchase amount was/is current</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>