force-app/main/default/objects/Grain_Price__c/fields/Price_Per_Metric_Tonne__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Metric_Tonne__c</fullName>
    <description>Currency field to hold the Price Per Metric Tonne that Manildra is currently purchasing this grade of grain for</description>
    <label>Price Per Metric Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>