force-app/main/default/objects/Grain_Price__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Master-Detail with Site for Cash Price to effectively work as a Junction Object between Site and Product to show which products are currently being purchased, by which Site, by which Bin Grade, at what cost.</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Cash_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>