force-app/main/default/objects/Grain_Price__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
   Price_Per_Metric_Tonne__c = 0, 
   &quot;Not Purchasing&quot;,
   &quot;Purchasing&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>