force-app/main/default/objects/Grain_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bin_Grade__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>Price_Per_Metric_Tonne__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>